<resources>
    <string name="app_name">Praktikum Pemrograman Bergerak Android</string>

    <string name="login">Login</string>

    <string name="username_">Username:</string>
    <string name="username_hint">Masukkan Username</string>

    <string name="password_">Password:</string>
    <string name="password_hint">Masukkan Password</string>

    <string name="log_in">Log In</string>

    <string name="login_success">Login Sukses</string>
    <string name="login_blank">Masukkan Username dan Password Anda!"</string>
</resources>