<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:letterSpacing="0.04"

        android:text="@string/login"

        android:textAlignment="center"
        android:textColor="#1E293B"
        android:textSize="32sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="96dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >


        <TextView
            android:id="@+id/username_"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="2"
            android:text="@string/username_"

            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:autofillHints="password"
            android:hint="@string/username_hint"
            android:inputType="text"
            android:textSize="16sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/password_"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="2"

            android:text="@string/password_"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:autofillHints="password"
            android:ems="10"
            android:hint="@string/password_hint"
            android:importantForAutofill="auto"
            android:textSize="16sp"
            android:inputType="textPassword" />


    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="48dp" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:backgroundTint="@color/button_login_background"
        android:text="@string/log_in"
        app:cornerRadius="20dp" />


</LinearLayout>